[FE] style fixes on menus page

--- a/front-end/src/containers/Menus/components/MenusHeader/styles.scss
+++ b/front-end/src/containers/Menus/components/MenusHeader/styles.scss
@@ -7,7 +7,7 @@
   height: 70px;
   z-index: $zindex-menu-header;
   background-color: $extra-light-green;
-  border: 1px solid #70707080;
+  border-bottom: 1px solid #70707080;
   transition: all ease-out 0.1s;
 
   display: flex;
