--- a/front-end/src/containers/Menus/components/MenuItem/styles.scss
+++ b/front-end/src/containers/Menus/components/MenuItem/styles.scss
@@ -1,7 +1,7 @@
 @import "../../../../styles/variables/variables";
 
 .div-menu-item {
-  margin: 15px;
+  margin: 12px;
   border-radius: 10px;
   border: 1px solid #70707080;
   box-shadow: $shadow-secondary;
@@ -20,7 +20,7 @@
   }
 
   .div-menu-item-name-description {
-    padding: 20px;
+    padding: 15px;
 
     %one-line {
       width: 100%;
@@ -30,13 +30,13 @@
     }
 
     .div-menu-item-name {
-      font-size: 18px;
+      font-size: $small-font-size - 1;
       font-family: 'Montserrat-Bold';
       @extend %one-line;
     }
 
     .div-menu-item-description {
-      font-size: 16px;
+      font-size: $mobile-regular-font-size;
       font-family: 'Montserrat-Light';
       margin: 10px 0 10px 0;
       @extend %one-line;
@@ -46,7 +46,7 @@
   .div-menu-item-bottom {
     display: flex;
     border-top: 1px solid #A2A2A280;
-    height: 78px;
+    height: 67px;
 
     %one-third-part {
       width: 33.3%;
@@ -57,7 +57,7 @@
 
     .div-menu-item-price {
       @extend %one-third-part;
-      font-size: $small-font-size;
+      font-size: $mobile-regular-font-size;
     }
 
     .div-numeric-counter {
