--- a/front-end/src/containers/Authentication/Signup/styles.scss
+++ b/front-end/src/containers/Authentication/Signup/styles.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/variables/variables";
 
 .signup-container {
-  padding-top: 50px;
+  padding-top: 70px;
   background-color: #FAFBFD;
   padding-bottom: 1px;
 
@@ -31,13 +31,13 @@
     margin-top: 90px;
 
     .div-signup-img, .div-signup-form {
-      max-width: 720px;
+      max-width: 610px;
       width: 50%;
       padding: 0 20px;
 
       .auth-form {
-        padding-left: 50px;
-        padding-right: 50px;
+        padding-left: 40px;
+        padding-right: 40px;
       }
 
       .img-background {
@@ -69,6 +69,7 @@
   @media (max-width: 1200px) {
     .div-signup-form-container {
       flex-direction: column;
+      align-items: center;
 
       .div-signup-img {
         display: none;
