[FE] style fixes

--- a/front-end/src/containers/Menus/components/MenusHeader/styles.scss
+++ b/front-end/src/containers/Menus/components/MenusHeader/styles.scss
@@ -19,7 +19,7 @@
   .div-separator {
     width: 1px;
     height: 30px;
-    background-color: $text-light-gray;
+    background-color: #70707080;
     margin: 0 40px;
   }
 
