--- a/front-end/src/containers/Settings/OrderHistory/styles.scss
+++ b/front-end/src/containers/Settings/OrderHistory/styles.scss
@@ -40,11 +40,11 @@
   }
 
   .btn-load-more {
-    width: 182px;
-    height: 53px;
-    font-size: $small-font-size;
-    border-radius: 23px;
-    margin: 100px 0;
+    width: 177px;
+    height: 51px;
+    font-size: $mobile-regular-font-size + 1;
+    border-radius: 26px;
+    margin: 100px 0 40px;
     margin-left: 50%;
     transform: translateX(-50%);
   }
