--- a/front-end/src/containers/Settings/PaymentMethod/components/PaymentMethodInfo/styles.scss
+++ b/front-end/src/containers/Settings/PaymentMethod/components/PaymentMethodInfo/styles.scss
@@ -1,23 +1,23 @@
 @import "../../../../../styles/variables/variables";
 
 .payment-method-info {
-  width: 670px;
-  height: 120px;
+  width: 539px;
+  height: 102px;
   border-radius: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 40px 0 30px;
+  padding: 0 35px 0 25px;
 
   .div-image-wrapper {
-    width: 80px;
+    width: 60px;
     
     .img-payment-method {
-      width: 40px;
+      width: 30px;
     }
 
     .img-payment-method-long {
-      width: 80px;
+      width: 60px;
     }
   }
 
@@ -28,13 +28,14 @@
     flex-grow: 1;
 
     .img-password {
-      width: 40px;
-      margin-right: 15px;
+      width: 33px;
+      margin-right: 10px;
     }
 
     span {
-      font-size: $small-font-size;
+      font-size: $mobile-regular-font-size - 1;
       font-family: 'Montserrat-Medium';
+      color: #5A5858;
     }
   }
 }
