--- a/front-end/src/containers/Settings/components/MealPreferenceSlider/styles.scss
+++ b/front-end/src/containers/Settings/components/MealPreferenceSlider/styles.scss
@@ -1,14 +1,15 @@
 @import "../../../../styles/variables/variables";
 
 .meal-preference-slider {
-  height: 80px;
-  border-radius: 20px;
+  height: 67px;
+  border-radius: 4px;
   box-shadow: 0px 5px 10px #BAD0F1;
-  padding: 10px 25px 25px;
+  padding: 10px 25px 20px;
 
   .slider-title {
     color: $text-light-gray;
-    font-size: $mobile-small-font-size + 1;
+    font-size: $mobile-small-font-size + 2;
+    font-family: 'OpenSans-Regular';
     text-align: center;
   }
 
@@ -35,7 +36,7 @@
       .rc-slider-handle {
         width: 26px;
         height: 26px;
-        margin-top: -8px;
+        margin-top: -10px;
         border: 4px solid white;
         background-color: $green-primary;
         box-shadow: 0px 5px 10px rgba(0,0,0,0.16);
@@ -46,7 +47,9 @@
       width: 60px;
       color: $text-light-gray;
       font-family: 'Montserrat-Medium';
-      margin-left: 15px;
+      font-size: $small-font-size;
+      margin-left: 5px;
+      padding-left: 10px;
       text-align: center;
     }
   }
