--- a/front-end/src/containers/Checkout/components/MenuDatePicker/styles.scss
+++ b/front-end/src/containers/Checkout/components/MenuDatePicker/styles.scss
@@ -21,8 +21,8 @@
     }
 
     .dropdown__content {
-      width: 271px;
-      height: 213px;
+      width: 247px;
+      height: 194px;
       background-color: white;
       border-radius: 15px;
       border: 0.5px solid #70707050;
@@ -39,9 +39,9 @@
         overflow-y: scroll;
   
         .div-date-menu {
-          height: 46px;
-          line-height: 46px;
-          font-size: $small-font-size;
+          height: 42px;
+          line-height: 42px;
+          font-size: $mobile-regular-font-size;
           color: #ACACAC;
           padding-left: 15px;
   
