--- a/front-end/src/containers/Checkout/components/OrderSummary/styles.scss
+++ b/front-end/src/containers/Checkout/components/OrderSummary/styles.scss
@@ -1,8 +1,8 @@
 @import "../../../../styles/variables/variables";
 
-$padding: 40px;
-$margin: 20px;
-$order-summary-header-height: 108px;
+$padding: 28px;
+$margin: 15px;
+$order-summary-header-height: 70px;
 
 .order-summary-container {
   background-color: white;
@@ -18,7 +18,7 @@ $order-summary-header-height: 108px;
     flex-direction: row;
     justify-content: space-between; 
     align-items: center;
-    font-size: $footer-secondary-font-size;
+    font-size: $small-font-size;
 
     .order-summary-title {
       color: $text-light-gray;
@@ -36,8 +36,8 @@ $order-summary-header-height: 108px;
   }
 
   .order-summary-info {
-    color: #ACACAC;
-    font-size: $footer-primary-font-size;
+    color: $text-light-gray;
+    font-size: $mobile-regular-font-size;
 
     %order-summary-info-block {
       display: flex;
@@ -58,6 +58,10 @@ $order-summary-header-height: 108px;
       color: $green-primary;
     }
 
+    .span-light-gray {
+      color: #ACACAC;
+    }
+
     .order-summary-promo-switch {
       display: flex;
       align-items: center;
@@ -72,7 +76,7 @@ $order-summary-header-height: 108px;
 
       span {
         color: #535453;
-        // font-size: $small-font-size;
+        font-size: $mobile-regular-font-size - 1;
         font-family: 'Montserrat-Medium';
         transition: all .25s linear;
       }
@@ -100,12 +104,13 @@ $order-summary-header-height: 108px;
 
       input {
         width: 100%;
-        height: 67px;
+        height: 47px;
         border: 1px solid #B4B4B4;
         border-radius: 5px;
         padding-left: 20px;
         padding-right: 180px;
         caret-color: $text-light-gray;
+        font-size: $small-font-size;
 
         &:focus {
           border: 1px solid #606060;
@@ -118,8 +123,8 @@ $order-summary-header-height: 108px;
         right: $padding - 4px;
         bottom: 6px;
         width: 170px;
-        height: 55px;
-        line-height: 55px;
+        height: 35px;
+        line-height: 35px;
         color: #DFDFDF;
         text-align: center;
         border-radius: 5px;
@@ -138,18 +143,18 @@ $order-summary-header-height: 108px;
       font-family: 'Montserrat-Medium';
       padding-left: $padding;
       padding-right: $padding;
-      margin: $margin 0;
+      margin: 10px 0;
     }
   }
 
   .order-summary-items {
-    padding: $margin $padding;
+    padding: 30px;
 
     .order-summary-items-header {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      font-size: $footer-secondary-font-size;
+      font-size: $small-font-size;
 
       .order-summary-items-title {
         color: $text-light-gray;  
@@ -157,7 +162,7 @@ $order-summary-header-height: 108px;
     }
 
     .order-summary-items-list {
-      margin-top: $margin;
+      margin-top: 30px;
       overflow-y: hidden;
       max-height: 400px;
 
@@ -214,8 +219,9 @@ $order-summary-header-height: 108px;
 
         input {
           padding-left: 15px;
-          height: 50px;
+          height: 47px;
           padding-right: 80px;
+          font-size: $small-font-size;
         }
 
         span {
