--- a/front-end/src/containers/Home/components/FeaturedMenu/styles.scss
+++ b/front-end/src/containers/Home/components/FeaturedMenu/styles.scss
@@ -4,7 +4,7 @@
   position: relative;
   background-color: white;
   border: 1px solid $border-gray;
-  border-radius: 8px;
+  border-radius: 4px;
   display: flex;
   flex-direction: column;
   margin: 20px;
@@ -12,7 +12,7 @@
   overflow: hidden;
 
   .img-featured-menu {
-    height: 250px;
+    height: 160px;
     border-bottom: 1px solid $border-gray;
   }
 
@@ -24,12 +24,12 @@
     flex-grow: 1;
 
     .div-featured-menu-details {
-      padding: 16px;
+      padding: 12px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       flex-grow: 1;
-      font-size: $small-font-size - 1;
+      font-size: $mobile-regular-font-size - 1;
   
       .div-featured-menu-name {
         text-align: left;
@@ -55,17 +55,17 @@
     .div-order {
       display: flex;
       justify-content: space-between;
-      height: 65px;
-      padding: 5px;
-      font-size: $small-font-size - 1;
+      height: 36px;
+      padding: 2px;
+      font-size: $mobile-regular-font-size - 1;
   
       .div-price {
         background-color: $bg-gray;
         color: #4c4e4c;
         text-align: center;
-        line-height: 55px;
+        line-height: 32px;
         font-family: 'Lato-Bold';
-        border-radius: 4px;
+        border-radius: 2px;
         width: calc(50% - 2.5px);
       }
   
@@ -73,8 +73,8 @@
         background-color: #EAFEEB;
         color: $green-primary;
         text-align: center;
-        line-height: 55px;
-        border-radius: 4px;
+        line-height: 32px;
+        border-radius: 2px;
         width: calc(50% - 2.5px);
       }
     }
