[FE] update pricing page styles

--- a/front-end/src/containers/HowItWorks/components/MealPlan/styles.scss
+++ b/front-end/src/containers/HowItWorks/components/MealPlan/styles.scss
@@ -57,7 +57,7 @@
     width: calc(100% - 96px);
     height: 46px;
     margin: 24px 43px 43px;
-    font-size: $mobile-regular-font-size;
+    font-size: $mobile-regular-font-size - 1;
     border-radius: 6px;
   }
 
