--- a/front-end/src/containers/HowItWorks/styles.scss
+++ b/front-end/src/containers/HowItWorks/styles.scss
@@ -40,7 +40,7 @@
     .div-meal-plans-grid {
       max-width: calc(950px);
       .div-meal-plan-wrapper {
-        padding: 50px 40px;
+        padding: 10px 40px 50px;
 
         @media (max-width: 1400px) {
           padding-left: 30px;
