--- a/front-end/src/containers/HowItWorks/components/CommonQuestions/styles.scss
+++ b/front-end/src/containers/HowItWorks/components/CommonQuestions/styles.scss
@@ -47,7 +47,7 @@
       border: 2.5px solid #DCDCDE;
       text-align: center;
       padding: 20px 50px;
-      font-size: $small-font-size - 1;
+      font-size: $small-font-size;
 
       a {
         color: $green-secondary;
