[FE] side cart font update

--- a/front-end/src/styles/_fonts.scss
+++ b/front-end/src/styles/_fonts.scss
@@ -68,3 +68,8 @@
   font-family: 'OpenSans-Bold';
   src: url('../assets/fonts/OpenSans/OpenSans-Bold.ttf');
 }
+
+@font-face {
+  font-family: 'Brandon-Regular';
+  src: url('../assets/fonts/Brandon/brandon-regular.otf') format('opentype');
+}
