--- a/front-end/src/containers/SideCart/components/SideCartSummary/styles.scss
+++ b/front-end/src/containers/SideCart/components/SideCartSummary/styles.scss
@@ -33,7 +33,8 @@
   .side-cart-summary-preferences {
     a {
       color: $green-primary;
-      font-size: $mobile-regular-font-size - 2;
+      font-size: $mobile-regular-font-size - 1;
+      font-family: 'Brandon-Regular';
     }
     
     text-align: center;
@@ -41,7 +42,6 @@
 
   .side-cart-summary-free-delivery {
     font-size: $mobile-regular-font-size;
-    font-family: 'Montserrat-Light';
     color: #545954;
     background-color: $extra-light-green;
     text-align: center;
@@ -56,7 +56,7 @@
     .side-cart-summary-price {
       display: flex;
       justify-content: space-between;
-      font-size: 12px;
+      font-size: $mobile-regular-font-size - 1;
     }
   }
 
