[FE] feedback modals update

--- a/front-end/src/containers/Modals/OrderFeedbackModal/styles.scss
+++ b/front-end/src/containers/Modals/OrderFeedbackModal/styles.scss
@@ -4,7 +4,7 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  width: 420px;
+  width: 417px;
   transform: translate(-50%, -50%);
   margin-bottom: 100px;
   border: 0.5px solid #EDF0F7;
@@ -17,7 +17,7 @@
 
   .order-feedback-header-section {
     @extend %order-feedback-section;
-    padding: 40px 108px 37px 32px;
+    padding: 40px 45px 37px 28px;
 
     .order-feedback-title {
       color: #196523;
@@ -28,7 +28,7 @@
 
     .order-feedback-subtitle {
       color: #6D6D6D;
-      font-size: $mobile-regular-font-size - 2;
+      font-size: $mobile-regular-font-size - 1;
       margin-bottom: 12px;
     }
 
@@ -44,7 +44,7 @@
     height: 240px;
     resize: none;
     padding: 30px;
-    font-size: $mobile-regular-font-size;
+    font-size: $mobile-regular-font-size - 1;
   }
 
   .order-feedback-bottom-section {
@@ -61,12 +61,12 @@
       }
 
       .order-feedback-check-title {
-        font-size: $mobile-regular-font-size - 2;
+        font-size: $mobile-regular-font-size - 1;
         font-family: 'Montserrat-SemiBold';
       }
 
       .order-feedback-check-subtitle {
-        font-size: $mobile-small-font-size;
+        font-size: $mobile-small-font-size + 2;
       }
     }
 
