[FE] update footer. simplified footer

--- a/front-end/src/containers/Root/components/Footer/styles.scss
+++ b/front-end/src/containers/Root/components/Footer/styles.scss
@@ -24,7 +24,7 @@
 
   .div-footer-separator-line {
     height: 1px;
-    background-color: white;
+    background-color: #212122;
   }
 
   .div-footer-middle-container {
