--- a/front-end/src/containers/Root/components/Footer/components/FooterLanguageButton/styles.scss
+++ b/front-end/src/containers/Root/components/Footer/components/FooterLanguageButton/styles.scss
@@ -47,47 +47,25 @@
 
   .dropdown__content {
     width: 100%;
-    max-height: 300px;
+    height: 241px;
     overflow-y: scroll;
     background-color: #212122;
     color: #AFAFAF;
+    padding: 25px 0;
 
     .main-language-menu {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      height: 40px;
-      padding: 0 40px;
+      height: 27px;
+      padding-left: 120px;
       cursor: pointer;
-      font-size: $small-font-size;
-
-      img {
-        height: 23px;
-      }
+      font-size: $mobile-regular-font-size - 2;
+      color: white;
 
       &:hover {
         background-color: white;
         color: black;
-      }
-    }
-
-    .sub-language-menus {
-      background-color: #2D2D2D;
-      padding-top: 10px;
-
-      .sub-language-menu {
-        display: flex;
-        align-items: center;
-        height: 40px;
-        padding-left: 70px;
-        cursor: pointer;
-        font-size: $small-font-size + 1;
-        font-family: 'Montserrat-Medium';
-
-        &:hover {
-          background-color: white;
-          color: black;
-        }
       }
     }
   }
