[FE] update bottom form

--- a/front-end/src/containers/Home/styles.scss
+++ b/front-end/src/containers/Home/styles.scss
@@ -203,13 +203,9 @@
 
   .div-bottom-form {
     position: relative;
-    background-image: url("../../assets/images/bottom_banner.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-
     margin-top: 100px;
-    height: 500px;
+    height: 247px;
+    background-color: #FAFBFD;
    
     .bottom-form {
       position: absolute;
