--- a/front-end/src/containers/Home/components/BottomForm/styles.scss
+++ b/front-end/src/containers/Home/components/BottomForm/styles.scss
@@ -1,51 +1,46 @@
 @import "../../../../styles/variables/variables";
 
 .bottom-form {
-  background-color: white;
-  padding: 20px;
-  
   .bottom-form-title {
     width: 100%;
     text-align: center;
     font-family: 'Montserrat-Medium';
-    font-size: $small-font-size + 1;
-    color: #686868;
+    font-size: $mobile-regular-font-size;
+    color: #6A6D75;
   }
 
   .bottom-form-inputs {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     margin-top: 25px;
+    height: 56px;
+    border-radius: 3px;
+    border: 1px solid #E1E1E1;
 
     input {
-      width: calc(50% - 6px);
-      height: 50px;
-      border: 1px solid #E1E1E1;
-      border-radius: 3px;
+      flex-grow: 1;
+      height: 100%;
       padding: 0 20px;
       font-size: $mobile-regular-font-size;
-      font-family: 'Montserrat-Light';
+      font-family: 'OpenSans-Light';
     }
   }
 
   .btn-start {
-    width: 100%;
-    height: 66px;
-    font-size: $small-font-size - 1;
+    width: 169px;
+    height: 48px;
+    font-size: $mobile-regular-font-size - 1;
+    font-family: 'Montserrat-Medium';
     border-radius: 4px;
-    margin-top: 25px;
-    margin-bottom: 10px;
+    margin-right: 3px;
   }
 
   .bottom-form-link {
     width: 100%;
     text-align: center;
-    font-size: $mobile-regular-font-size - 1;
-    color: #2E2E2E;
-    margin-top: 5px;
-
-    a {
-      color: #138E1C;
-    }
+    font-size: $mobile-regular-font-size;
+    color: #6A6D75;
+    margin-top: 30px;
   }
 }
