--- a/front-end/src/containers/OrderConfirmation/styles.scss
+++ b/front-end/src/containers/OrderConfirmation/styles.scss
@@ -7,58 +7,59 @@
     padding: 120px 0;
     margin-left: 50%;
     transform: translateX(-50%);
-    width: 700px;
+    width: 530px;
 
     .div-order-confirm-form {
       background-color: white;
       border: 1px solid #B7CBB8;
-      box-shadow: $shadow-secondary;
 
       .div-order-confirm-form-header {
-        height: 245px;
+        height: 156px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         background-color: #F2FFF3;
+        border-bottom: 1px solid #B7CBB8;
 
         img {
-          height: 108px;
+          height: 78px;
         }
         span {
           color: #4EAC53;
-          font-size: 30px;
-          margin-top: 30px;
+          font-size: $small-font-size + 1;
+          margin-top: 15px;
         }
       }
 
       .div-order-confirm-form-detail {
-        padding: 60px;
+        padding: 40px 100px 30px;
         display: flex;
         flex-direction: column;
         align-items: center;
 
         .div-order-confirm-form-greeting {
-          font-size: $large-font-size;
+          font-size: 36px;
           font-family: 'Montserrat-SemiBold'; 
         }
 
         .div-order-confirm-form-description {
           text-align: center;
-          font-size: $footer-secondary-font-size;
+          font-family: 'OpenSans-Regular';
+          font-size: $mobile-regular-font-size + 1;
           color: $text-light-gray;
-          margin-top: 20px;
+          margin-top: 15px;
         }
 
         .div-order-confirm-form-info-list {
           width: 100%;
-          margin: 50px 0;
+          margin: 35px 0;
 
           .div-order-confirm-form-info {
             display: flex;
             justify-content: space-between;
             color: $text-light-gray;
-            font-size: 16px;
+            font-size: $mobile-regular-font-size;
             font-family: 'Montserrat-Medium';
   
             span {
@@ -77,13 +78,14 @@
         .div-order-confirm-form-buttons {
           width: 100%;
           display: flex;
-          justify-content: space-between;
+          justify-content: center;
 
           .button {
-            width: calc(50% - 15px);
-            height: 64px;
-            font-size: $footer-secondary-font-size;
-            border-radius: 4px;
+            width: 151px;
+            height: 41px;
+            font-size: $mobile-regular-font-size;
+            border-radius: 2px;
+            margin: 0 8px;
           }
         }
       }
@@ -93,39 +95,41 @@
       margin-top: 30px;
       padding-top: 20px;
       background-color: white;
+      border: 1px solid #B7CBB8;
 
       .div-order-confirm-share-title {
         font-family: 'Montserrat-SemiBold';
-        margin-left: 40px;
+        margin-left: 50px;
       }
 
       .div-order-confirm-share-description {
         font-size: $mobile-regular-font-size;
+        font-family: 'OpenSans-Regular';
         color: $text-light-gray;
-        width: 75%;
+        margin-right: 40px;
         margin-top: 10px;
-        margin-left: 40px;
+        margin-left: 50px;
       }
 
       .div-order-confirm-share-code {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 30px 0;
+        padding: 25px 0;
 
         .div-order-confirm-share-code-title {
           color: #C7C5C5;
-          font-size: $mobile-regular-font-size;
+          font-size: $mobile-regular-font-size - 1;
           font-family: 'Montserrat-SemiBold';
         }
         .div-order-confirm-share-code-value {
-          width: 290px;
-          height: 60px;
-          margin-top: 10px;
-          line-height: 60px;
+          width: 220px;
+          height: 52px;
+          margin-top: 5px;
+          line-height: 52px;
           text-align: center;
           background-color: #F1F1F1;
-          font-size: 30px;
+          font-size: 22px;
           font-family: 'Montserrat-SemiBold';
           border: 1px dashed #C7C5C5;
         }
@@ -133,15 +137,15 @@
 
       .btn-share {
         width: 100%;
-        height: 80px;
+        height: 61px;
         background-color: #515151;
-        font-size: $small-font-size;
+        font-size: $mobile-regular-font-size - 2;
         font-family: 'Montserrat-SemiBold';
         border-radius: unset;
 
         img {
-          height: 24px;
-          margin-right: 20px;
+          height: 18px;
+          margin-right: 15px;
         }
       }
     }
