--- a/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
+++ b/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
@@ -32,10 +32,10 @@
     border-radius: 15px;
     box-shadow: 2px 2px 6px rgba(0,0,0,0.16);
     width: 255px;
-    height: 200px;
+    height: 178px;
     margin-left: -150px;
     margin-top: 12px;
-    padding-top: 18px;
+    padding-top: 10px;
     animation-name: dropdown-animation;
     animation-duration: 0.5s;
     transform-origin: left top;
@@ -43,15 +43,15 @@
 
     .div-menu {
       color: $text-light-gray;
-      padding: 0 20px;
+      padding-left: 40px;
       margin-bottom: 5px;
-      height: 51px;
+      height: 48px;
       font-size: $mobile-regular-font-size - 1;
       display: flex;
       align-items: center;
 
       img {
-        height: 35px;
+        height: 30px;
         margin-right: 20px;
       }
 
