--- a/front-end/src/containers/Settings/RedeemCredit/styles.scss
+++ b/front-end/src/containers/Settings/RedeemCredit/styles.scss
@@ -7,36 +7,37 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 580px;
+    width: 470px;
 
     .div-redeem-credit-title {
       font-family: 'Montserrat-SemiBold';
+      font-size: $small-font-size;
     }
 
     .div-redeem-credit-balance {
       font-family: 'Montserrat-Medium';
-      font-size: $small-font-size;
+      font-size: $mobile-regular-font-size - 1;
       color: #5A5858;
       margin-top: 10px;
     }
   
     .input-code {
-      margin-top: 20px;
-      height: 63px;
+      margin-top: 15px;
+      height: 51px;
       width: 100%;
       border: 1px solid $text-light-gray;
       background-color: #FAFAFA;
       padding: 0 20px;
-      font-size: $small-font-size;
+      font-size: $mobile-regular-font-size - 1;
     }
   
     .btn-redeem {
       margin-top: 20px;
       width: 100%;
-      height: 81px;
+      height: 65px;
       background-color: #515151;
       border-radius: 0;
-      font-size: $small-font-size;
+      font-size: $mobile-regular-font-size;
       font-family: 'Montserrat-SemiBold';
     }
   
@@ -44,7 +45,7 @@
       margin-top: 30px;
       font-size: 12px;
       color: #5A5858;
-      width: 80%;
+      width: 100%;
     }
   
     .span-help-link {
