[FE] signup page update,  terms of service page update

--- a/front-end/src/containers/Authentication/components/AuthForm/styles.scss
+++ b/front-end/src/containers/Authentication/components/AuthForm/styles.scss
@@ -86,7 +86,7 @@
     .btn-continue {
       margin-top: 20px;
       width: 100%;
-      height: 53px;
+      height: 52px;
       font-size: $mobile-regular-font-size;
       font-family: 'Montserrat-Medium';
       border-radius: 4px;
@@ -148,7 +148,7 @@
     text-align: center;
     margin-top: 20px;
     font-size: $mobile-regular-font-size;
-    font-family: 'Montserrat-Regular';
+    font-family: 'OpenSans-Regular';
 
     .auth-form-footer-signup {
       margin-top: 20px;
