--- a/front-end/src/containers/TermsOfService/styles.scss
+++ b/front-end/src/containers/TermsOfService/styles.scss
@@ -5,13 +5,9 @@
   padding-top: 10px;
   padding-bottom: 70px;
 
-  .bold {
-    font-family: 'Montserrat-Bold';
-  }
-
   .div-terms-of-service-content {
     margin: 70px 200px 0;
-    padding: 60px 60px 100px;
+    padding: 60px 60px 30px;
     background-color: white;
     box-shadow: $shadow-secondary;
 
@@ -56,10 +52,16 @@
       font-size: 15px;
       .div-terms-of-service-paragraph {
         margin-bottom: 20px;
+        font-size: $mobile-regular-font-size;
       }
 
       .div-terms-of-service-subtitle {
         font-family: 'Montserrat-Bold';
+      }
+
+      .bold {
+        font-family: 'Montserrat-Bold';
+        font-size: 15px;
       }
     }
   }
